--- a/css/index.css
+++ b/css/index.css
@@ -4,6 +4,7 @@
 	margin-right: auto;
 	width: 80%;
 	height: 70%;
+	background-size: cover;
 }
 
 .myGallery img{
@@ -13,13 +14,13 @@
 
 .navigator {
 	height: 100px;
-	width: 200px;
+	width: 700px;
 	margin-left: auto;
 	margin-right: auto;
 }
 .navigatorButton {
 	float: left;
-	width: 48px;
+	width: 98px;
 	height: 40px;
 	background-color: #333;
 	margin: 1px;
@@ -28,4 +29,8 @@
 }
 .navigatorButton:hover {
 	background-color: #999;
+}
+
+.selected {
+	background-color: #555;	
 }
