--- a/css/about.css
+++ b/css/about.css
@@ -1,11 +1,16 @@
+.section {
+		width: 90%;
+	margin-left: auto;
+	margin-right: auto;
+
+}
+
 .section p {
-	font-size: 16pt;
 	padding-bottom: 25px;
 	/*width: 50%;*/
 }
 
 .section .postImageFrame {
-	width: 100%;
 	height: 400px;
 }
 
