--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ h1, h2, h3, h4, li {
 	font-family: "HelveticaNeue-CondensedBold", Helvetica Neue, Helvetica, Arial;
 }
 p {
-	font-size: 14pt;
+	font-size: 12pt;
 	padding-bottom: 20px;
 }
 
@@ -120,6 +120,9 @@ a:hover {
 	margin-left: auto;
 	margin-right: auto;
 	width: 90%;
+}
+.profile p{
+	font-size: 16pt;
 }
 
 .section {
