--- a/ripple/css/style.css
+++ b/ripple/css/style.css
@@ -67,7 +67,7 @@ p {
 	border-color: rgba(255,255,255,0.75); 
 	border-radius: 0px;
 	background-color: rgba(255,255,255,0.75);
-	color: black;
+	color: #2c3e50;
 	font-size: 24pt;
 	height: 48pt;
 }
@@ -81,4 +81,9 @@ p {
 	padding: 12pt;
 	padding-left: 18pt;
 	padding-right: 18pt;
+}
+
+.mySubmit:hover {
+	background-color: rgba(52, 73, 94, 0.9);
+	border-color: rgba(52, 73, 94, 0.5);
 }
