--- a/bian-dang/src/components/navigation_buttons/styles.module.css
+++ b/bian-dang/src/components/navigation_buttons/styles.module.css
@@ -1,3 +1,6 @@
+@import "../../css/typography.css";
+@import "../../css/colors.css";
+
 .next-button {
   text-align: right;
 }
@@ -16,8 +19,22 @@
 }
 
 .navigation-button {
-  color: #444; 
-  font-family: Georgia, 'Times New Roman', Times, serif;
-  font-size: 18px;
-  font-style: italic;
+  color: var(--color-text-dark-dark);
+  font-family: var(--font-serif);
+}
+
+@media (max-width: 576px) {
+  .navigation-button {
+    font-size: 14px;
+  }
+}
+@media (min-width: 576px) {
+  .navigation-button {
+    font-size: 16px;
+  }
+}
+@media (min-width: 768px) {
+  .navigation-button {
+    font-size: 18px;
+  }
 }
