--- a/bian-dang/src/components/page/styles.module.css
+++ b/bian-dang/src/components/page/styles.module.css
@@ -1,8 +1,14 @@
+@import "../../css/colors.css";
+
+.container {
+  background-color: var(--color-memories);
+}
+
 .page {
   max-width: 700px;
   margin: auto;
   padding-top: 20px;
-  padding-bottom: 20px;
+  padding-bottom: 60px;
 }
 
 .layout {
