--- a/bian-dang/src/pages/contact/styles.module.css
+++ b/bian-dang/src/pages/contact/styles.module.css
@@ -1,3 +1,6 @@
+@import "../../css/colors.css";
+@import "../../css/typography.css";
+
 .contact {
   padding-bottom: 40px;
 }
@@ -5,20 +8,22 @@
 .submit-button {
   padding: 15px !important;
   margin-top: 40px !important;
-  font-family: Helvetica, Arial, sans-serif !important;
+  font-family: var(--font-sans-serif);
   font-size: 10pt !important;
   text-transform: uppercase !important;
   font-weight: bold !important;
-  background-color: #006ac1 !important;  /* subway blue */
-  border-color: #006ac1 !important;  /* subway blue */
+  background-color: var(--color-101) !important;; 
+  border-color: var(--color-101) !important;; 
 }
 
 .submit-button:hover {
-  background-color: #308dd9 !important;  /* subway blue (lightened) */
-  border-color: #308dd9 !important;  /* subway blue (lightened) */
+  background-color: var(--color-101-faded) !important; 
+  border-color: var(--color-101-faded) !important; 
+  opacity: 0.8 !important; 
 }
 
 .submit-button:active {
-  background-color: #5faeed !important;  /* subway blue (lightened again) */
-  border-color: #5faeed !important;  /* subway blue (lightened again) */
+  background-color: var(--color-101) !important; 
+  border-color: var(--color-101) !important; 
+  opacity: 0.6 !important; 
 }
