--- a/bian-dang/src/components/footer/styles.module.css
+++ b/bian-dang/src/components/footer/styles.module.css
@@ -10,13 +10,10 @@
   
   position: relative;
   bottom: 0;
-  width: 120%;
-  margin-left: -10%;
+  width: calc(100% + 30px);
+  margin-left: -15px;
   padding-top: 20px;
   padding-bottom: 40px;
   color: white;
   text-align: center;
-}
-
-.copyright {
 }
