--- a/bian-dang/src/components/page/styles.module.css
+++ b/bian-dang/src/components/page/styles.module.css
@@ -1,8 +1,15 @@
-@import "../../css/colors.css";
+@import '../../css/colors.css';
+@import '../../css/typography.css';
 
 .container {
   background-color: var(--color-memories);
-  height: 100%;
+  position: relative;
+  min-height: calc(100vh - 80px);
+  margin-bottom: -100px;
+
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
 }
 
 .page {
@@ -14,6 +21,7 @@
 
 .layout {
   margin-top: 20px;
+  flex-grow: 1;
 }
   
 .next-button {
@@ -28,4 +36,20 @@
   padding: 40px;
   padding-top: 20px;
   padding-bottom: 30px;
+}
+
+.footer {
+  background: var(--color-101); 
+  color: var(--color-text-light-light);
+  font-family: var(--font-sans-serif);
+  font-size: 12px;
+  text-align: center;
+  text-transform: uppercase;
+  
+  width: calc(100% + 30px);
+  margin-left: -15px;
+  padding-top: 20px;
+  padding-bottom: 40px;
+
+  flex-shrink: 0;
 }
