--- a/bian-dang/src/pages/about/styles.module.css
+++ b/bian-dang/src/pages/about/styles.module.css
@@ -1,3 +1,21 @@
+@import "../../css/colors.css";
+@import "../../css/typography.css";
+
 .header {
   padding-bottom: 60px;
 }
+
+.social-link {
+  font-family: var(--font-sans-serif);
+  color: var(--color-101);
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.social-label {
+  display: inline-block;
+  width: 140px;
+  text-align: right;
+  margin-right: 10px;
+}
+
