--- a/bian-dang/src/css/typography.css
+++ b/bian-dang/src/css/typography.css
@@ -3,66 +3,23 @@
   src: url("../fonts/dillan.otf");
 }
 
-/* @font-face {
-  font-family: "Alegreya";
-  src: url("../fonts/Alegreya/Alegreya-Black.ttf");
-  font-weight: 900;
-} */
-
 @font-face {
-  font-family: "Alegreya";
-  src: url("../fonts/Alegreya/Alegreya-Italic.ttf");
-  font-style: italic, oblique;
-}
-
-/* @font-face {
-  font-family: "Alegreya";
-  src: url("../fonts/Alegreya/Alegreya-BlackItalic.ttf");
-  font-style: italic, oblique;
-  font-weight: 900;
-} */
-
-/* @font-face {
-  font-family: "Alegreya";
-  src: url("../fonts/Alegreya/Alegreya-Medium.ttf");
-  font-weight: 400;
-} */
-
-@font-face {
-  font-family: "Alegreya";
-  src: url("../fonts/Alegreya/Alegreya-MediumItalic.ttf");
-  font-weight: normal;
+  font-family: "Optima";
+  src: url("../fonts/optima/Optima-Italic.woff");
   font-style: italic, oblique;
 }
 
 @font-face {
-  font-family: "Alegreya";
-  src: url("../fonts/Alegreya/Alegreya-BoldItalic.ttf");
-  font-weight: bold;
-  font-style: italic, oblique;
-}
-
-@font-face {
-  font-family: "Alegreya";
-  src: url("../fonts/Alegreya/Alegreya-Bold.ttf");
+  font-family: "Optima";
+  src: url("../fonts/optima/Optima-Bold.woff");
   font-weight: bold;
   font-style: normal;
 }
 
 @font-face {
-  font-family: "Alegreya";
-  src: url("../fonts/Alegreya/Alegreya-Regular.ttf");
+  font-family: "Optima";
+  src: url("../fonts/optima/Optima.woff");
 }
-
-/* @font-face {
-  font-family: "Alegreya";
-  src: url("../fonts/Alegreya/Alegreya-ExtraBold.ttf");
-}
-
-@font-face {
-  font-family: "Alegreya";
-  src: url("../fonts/Alegreya/Alegreya-ExtraBoldItalic.ttf");
-} */
 
 @font-face {
   font-family: "MQingHua";
@@ -70,6 +27,6 @@
 }
 
 :root{
-  --font-sans-serif: Alegreya, Helvetica, Arial, sans-serif;
+  --font-sans-serif: Optima, Helvetica, Arial, sans-serif;
   --font-serif: Dillan, Georgia, 'Times New Roman', MQingHua, serif;
 }
