--- a/bian-dang/src/components/navigation_buttons/styles.module.css
+++ b/bian-dang/src/components/navigation_buttons/styles.module.css
@@ -25,12 +25,18 @@
 
 @media (max-width: 576px) {
   .navigation-button {
-    font-size: 14px;
+    font-size: 24px;
+  }
+  .desktop-text {
+    display: none;
   }
 }
 @media (min-width: 576px) {
   .navigation-button {
     font-size: 16px;
+  }
+  .mobile-text {
+    display: none;
   }
 }
 @media (min-width: 768px) {
