--- a/bian-dang/src/components/page/styles.module.css
+++ b/bian-dang/src/components/page/styles.module.css
@@ -19,8 +19,17 @@
   padding-bottom: 60px;
 }
 
+@media (max-width: 768px) {
+  .page { padding-top: 0px; }
+  .layout { margin-top: 0px}
+}
+
+@media (min-width: 768px) {
+  .page { padding-top: 20px; }
+  .layout { margin-top: 20px;}
+}
+
 .layout {
-  margin-top: 20px;
   flex-grow: 1;
 }
   
