--- a/bian-dang/src/pages/styles.module.css
+++ b/bian-dang/src/pages/styles.module.css
@@ -9,27 +9,34 @@
   margin: auto;
 }
 
+@media (min-width: 992px) {
+  .browser-header {display: normal;}
+  .mobile-header {display: none;}
+}
+
+@media (max-width: 992px) {
+  .browser-header {display: none;}
+  .mobile-header {display: normal;}
+}
+
+.homegraphic {
+  border: red 1px solid;
+  margin-top: 50px;
+}
+
+@media (min-width: 992px) { .homegraphic { margin-top: 50px; }}
+@media (max-width: 992px) and (min-width: 576px) { .homegraphic { margin-top: 10px; }}
+@media (max-width: 576px) { .homegraphic { margin-top: 0px; }}
+
 .logotype {
   padding-top: 50px;
   padding-bottom: 30px;
 }
 
-@media (max-width: 768px) {
-  .logotype-large {
-    display: none;
-  }
-  .logotype-medium {
-    display: normal;
-    margin: auto;
-    width: 100px;
-  }
-}
-
-@media (min-width: 768px) {
-  .logotype-large {
-    display: normal;
-  }
-  .logotype-medium {
-    display: none;
-  }
+.link {
+  color: var(--color-text-dark-dark);
+  font-weight: bold;
+  text-transform: uppercase;
+  font-family: var(--font-serif);
+  font-size: 16px; 
 }
