--- a/bian-dang/src/css/colors.css
+++ b/bian-dang/src/css/colors.css
@@ -1,5 +1,7 @@
 :root{
   --color-memories: rgb(247, 241, 225);
+  --color-memories-faded-1: rgb(247, 241, 225, 0.80);
+  --color-memories-faded-2: rgb(247, 241, 225, 0.55);
   --color-good-luck: rgb(253, 31, 0);
   --color-good-luck-faded-1: rgb(253, 31, 0, 0.75);
   --color-good-luck-faded-2: rgb(253, 31, 0, 0.5);
