--- a/bian-dang/src/pages/styles.module.css
+++ b/bian-dang/src/pages/styles.module.css
@@ -4,6 +4,10 @@
   background-color: var(--color-memories);
 }
 
+.browser-header {
+  text-align: right;
+}
+
 .page {
   max-width: 1200px;
   margin: auto;
@@ -19,14 +23,27 @@
   .mobile-header {display: normal;}
 }
 
-.homegraphic {
-  border: red 1px solid;
+.home-graphic {
   margin-top: 50px;
 }
 
-@media (min-width: 992px) { .homegraphic { margin-top: 50px; }}
-@media (max-width: 992px) and (min-width: 576px) { .homegraphic { margin-top: 10px; }}
-@media (max-width: 576px) { .homegraphic { margin-top: 0px; }}
+.home-list {
+  margin-top: 20px;
+  padding: 0px;
+}
+
+@media (min-width: 992px) { 
+  .home-graphic { margin-top: 50px; }
+  .home-list { display: none; }
+}
+@media (max-width: 992px) and (min-width: 576px) { 
+  .home-graphic { margin-top: 10px; }
+  .home-list { display: none; }
+}
+@media (max-width: 576px) { 
+  .home-graphic { display: none; }
+  .home-list { display: inherit; }
+}
 
 .logotype {
   padding-top: 50px;
