--- a/bian-dang/src/templates/gallery/styles.module.css
+++ b/bian-dang/src/templates/gallery/styles.module.css
@@ -7,5 +7,13 @@
 }
 
 .image-wrapper {
+  padding: 0px;
   padding-bottom: 10px;
+  border-style: none !important;
+  outline: none !important;
+}
+
+.image-wrapper:focus {
+  border-style: none !important;
+  outline: none !important;
 }
