Updated formatting in articles

--- a/src/templates/gallery/styles.module.css
+++ b/src/templates/gallery/styles.module.css
@@ -3,12 +3,18 @@
 }
 
 .description {
-  padding-bottom: 10px;
+  padding-bottom: 60px;
+}
+
+.caption {
+  padding-top: 10px;
+  text-align: left;
 }
 
 .image-wrapper {
   padding: 0px;
-  padding-bottom: 10px;
+  padding-bottom: 60px;
+  display: inline-block;
   border-style: none !important;
   outline: none !important;
 }
