--- a/src/components/home_list/styles.module.css
+++ b/src/components/home_list/styles.module.css
@@ -6,26 +6,10 @@
 }
 
 .article-wrapper {
-  position: relative;
+  display: inline-block;
+  padding-bottom: 30px;
 }
 
-.background {
-  position: absolute;
-  left: 0px;
-  top: 0px;
-
-  width: 100%;
-  height: 100%;
-  background-color: var(--color-memories-faded-1);
-}
-
-.article-text {
-  position: absolute;
-  padding-left: 50px;
-  padding-right: 50px;
-  left: 0px;
-  width: 100%;
-  top: 50%;
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%);
+.article-wrapper:hover > div > div {
+  color: var(--color-101) !important;
 }
