--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,14 +1,9 @@
 @import "../css/colors.css";
 
-html {
+html, body {
   background-color: var(--color-memories);
   height: 100%;
 }
-
-/* This is so the footers work :( */
-/* html, body, #gatsby-focus-wrapper, #___gatsby {
-  height: 100%;
-} */
 
 a {
   color: var(--color-101);
