--- a/src/components/header/styles.module.css
+++ b/src/components/header/styles.module.css
@@ -2,27 +2,42 @@
 @import "../../css/colors.css";
 
 .header {
-  margin-left: -15px;
-  margin-right: -15px;
+  padding: 0px;
   margin-bottom: 50px;
 }
 
-@media (max-width: 576px) { .home { padding-left: 10px; padding-top: 15px; }}
-@media (min-width: 576px) { .home { padding-left: 20px; padding-top: 20px; }}
-@media (max-width: 576px) { .medium-logo-button { display: none; }}
-@media (min-width: 576px) { .small-logo-button { display: none; }}
+@media (max-width: 768px) { 
+  .header { margin-left: 10px; margin-right: 10px; margin-top: 15px; }
+}
+@media (min-width: 768px) { 
+  .header { margin: 30px; }
+}
+
+@media (min-width: 768px) { 
+  .small-logo-button { display: none; }
+  .xsmall-logo-button { display: none; }
+}
+@media (max-width: 768px) and (min-width: 576px) { 
+  .medium-logo-button { display: none; }
+  .xsmall-logo-button { display: none; }
+}
+@media (max-width: 576px) { 
+  .medium-logo-button { display: none; }
+  .small-logo-button { display: none; }
+}
 
 .hamburger-button {
   border-width: 0px !important;
+  padding-right: 0px !important;
 }
 
 @media (min-width: 576px) { 
-  .buttons { 
-    position: absolute;
-    top: 30px; 
-    right: 30px; 
-  }
+  .buttons {  position: absolute; top: 30px;  right: 0px; }
 }
+@media (max-width: 768px) and (min-width: 576px) { 
+  .buttons {  position: absolute; top: 20px;  right: 0px; }
+}
+
 
 .button {
   text-align: right;
@@ -32,6 +47,7 @@
 @media (max-width: 576px) { 
   .button { 
     display: relative; 
+    padding-right: 0px;
   }
 }
 @media (min-width: 576px) { 
@@ -48,5 +64,12 @@
   font-weight: bold;
   font-family: var(--font-serif);
 }
+
+.link-dm {
+  color: var(--color-memories);
+  font-weight: bold;
+  font-family: var(--font-serif);
+}
+
 @media (max-width: 576px) { .link { font-size: 16px; }}
 @media (min-width: 576px) { .link { font-size: 18px; }}
