--- a/src/css/text.module.css
+++ b/src/css/text.module.css
@@ -51,7 +51,19 @@ a.body-text {
   font-family: var(--font-sans-serif);
   font-size: 14pt;
   line-height: 24pt;
-  color: var(--color-text-dark-dark);
+  /* We're not specifying the color for poetry text 
+   * because we're hardcoding it to dark mode. This is a hack.
+   * It makes me feel sad*/
+   /* color: var(--color-text-dark-dark); */
+}
+
+.dark-mode-color {
+  /* This pains me. We're a dark mode. We ought 
+   * to have a global var for dark mode, and each 
+   * component should know how to render itself in 
+   * dark/light mode */
+  color: var(--color-memories); 
+  text-shadow: 1px 1px 5px black;
 }
 
 .caption-text {
