--- a/src/pages/styles.module.css
+++ b/src/pages/styles.module.css
@@ -1,34 +1,78 @@
 @import '../css/colors.css';
 
 .container {
-  background-color: var(--color-memories);
+  width: 100%;
 }
-
 .desktop-header {
   text-align: right;
+  display: inline-block;
+}
+.desktop-home {
+  display: inline-block;
 }
 
-.large-view {
-  max-width: 1600px;
-  margin: auto;
-  transform: translateX(-6%);
-  padding-top: 50px;
+@media (min-width: 992px) {
+  .desktop-header { width: 20%; margin-right: 40px; margin-left: -5%}
+  .desktop-home { width: 80%; min-width: 713px; position: absolute; }
 }
+@media (max-width: 992px) and (min-width: 768px) {
+  .desktop-header { width: 20%; margin-right: 30px; margin-left: -5%}
+  .desktop-home { width: 80%; position: absolute; }
+}
+@media (max-width: 768px) and (min-width: 576px) {
+  .desktop-header { width: 0%; }
+  .desktop-home { width: 100%; position: relative; } /* I have no idea why this has to be relative to work*/
+}
+
+.xlarge-view { position: relative; top: 0; width: 80%; margin: auto; max-width: 1200px; }
+.large-view { position: relative; top: 0; width: 90%; margin: auto; }
+.medium-view { position: relative; top: 0; width: 100%; }
+.small-view { position: relative; top: 0; width: 100%; }
 
 @media (min-width: 992px) { 
+  .xlarge-view { display: normal; }
+  .large-view { display: none; }
+  .medium-view { display: none; }
+  .small-view { display: none; }
+}
+@media (max-width: 992px) and (min-width: 768px) { 
+  .xlarge-view { display: none; }
   .large-view { display: normal; }
   .medium-view { display: none; }
   .small-view { display: none; }
 }
-@media (max-width: 992px) and (min-width: 576px) { 
+@media (max-width: 768px) and (min-width: 576px) { 
+  .xlarge-view { display: none; }
   .large-view { display: none; }
   .medium-view { display: normal; }
   .small-view { display: none; }
 }
 @media (max-width: 576px) { 
+  .xlarge-view { display: none; }
   .large-view { display: none; }
   .medium-view { display: none; }
   .small-view { display: normal; }
+}
+
+.xlarge-view {
+  padding-top: 10vh;
+}
+.large-view {
+  padding-top: 10vh;
+}
+
+.medium-view {
+  padding-left: 25px;
+  padding-right: 25px;
+}
+.small-view {
+  padding-left: 25px;
+  padding-right: 25px;
+}
+
+.compact-header {
+  margin-left: -10px;
+  margin-right: -10px;
 }
 
 .logotype {
@@ -39,7 +83,8 @@
 .link {
   color: var(--color-text-dark-dark);
   font-weight: bold;
-  text-transform: uppercase;
   font-family: var(--font-serif);
-  font-size: 16px; 
+  font-size: 20px;
 }
+@media (min-width: 992px) { .link { font-size: 22px;} }
+@media (max-width: 992px) { .link { font-size: 18px;} }
