Chore: Moved bing recipe into bing aricle

--- a/src/templates/article/styles.module.css
+++ b/src/templates/article/styles.module.css
@@ -1,3 +1,17 @@
+.article {
+  padding-bottom: 60px;
+}
+
+.by-lines {
+  padding-bottom: 20px;
+}
 .header {
   padding-bottom: 60px;
+}
+
+.callout {
+  display: inline-block;
+  padding: 10px;
+  border: rebeccapurple;
+  background-color: red;
 }
