--- a/src/pages/styles.module.css
+++ b/src/pages/styles.module.css
@@ -92,6 +92,11 @@
   font-family: var(--font-serif);
   font-size: 20px;
 }
+
+.button:nth-child(1) > .link:hover { color: var(--color-golden-carbs); }
+.button:nth-child(2) > .link:hover { color: var(--color-101); }
+.button:nth-child(3) > .link:hover { color: var(--color-good-luck); }
+
 @media (min-width: 992px) { .link { font-size: 22px;} }
 @media (max-width: 992px) { .link { font-size: 18px;} }
 
