Chore: Refactored <Page /> and <RubberBands />

--- a/src/components/navigation_buttons/styles.module.css
+++ b/src/components/navigation_buttons/styles.module.css
@@ -12,6 +12,8 @@
 .navigation-buttons {
   padding-top: 20px;
   padding-bottom: 30px;
+  padding-left: 10px;
+  padding-right: 10px;
   display: flex;
   flex-flow: row nowrap;
   justify-content: space-between
