--- a/src/components/page/styles.module.css
+++ b/src/components/page/styles.module.css
@@ -34,6 +34,7 @@
   flex: 1 0 auto;
   display: flex;
   align-items: stretch;
+  justify-content: center;
 }
 
 .layout {
@@ -43,34 +44,16 @@
   width: 100%;
   flex: 1 0 auto;
   align-items: stretch;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
-.page {
+.page, .full-page {
   padding: 10px;
-  padding-bottom: 60px;
+  padding-bottom: 120px;
   flex: 1 0 auto;
 }
 
 .sticky-footer {
   flex-shrink: 0;
-}
-
-@media (max-width: 768px) {
-  .rubber-bands { display: none; }
-}
-
-.rubber-bands {
-  position: relative;
-  overflow: hidden;
-  flex: 1 0 auto;
-}
-
-.rubber-band {
-  width: 50%;
-  min-width: 400px;
-  position: absolute;
-}
-
-.hidden {
-  display: none;
 }
