--- a/src/components/footer/styles.module.css
+++ b/src/components/footer/styles.module.css
@@ -1,8 +1,7 @@
 @import '../../css/colors.css';
 @import '../../css/typography.css';
 
-.footer {
-  color: var(--color-101);
+.footer, .footer-dark {
   font-family: var(--font-sans-serif);
   font-size: 12px;
   text-align: center;
@@ -14,3 +13,5 @@
 
   flex-shrink: 0;
 }
+.footer-dark { color: var(--color-street-lights); }
+.footer { color: var(--color-101); }
