--- a/src/pages/styles.module.css
+++ b/src/pages/styles.module.css
@@ -97,6 +97,10 @@
 .button:nth-child(2) > .link:hover { color: var(--color-101); }
 .button:nth-child(3) > .link:hover { color: var(--color-good-luck); }
 
+.button:nth-child(1) > .link:active { color: var(--color-golden-carbs-faded-1); }
+.button:nth-child(2) > .link:active { color: var(--color-101-faded-1); }
+.button:nth-child(3) > .link:active { color: var(--color-good-luck-faded-1); }
+
 @media (min-width: 992px) { .link { font-size: 22px;} }
 @media (max-width: 992px) { .link { font-size: 18px;} }
 
